# BurgerFlippers

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/flippers/: __init__.py  __main__.py  cli.py
src/flippers/burger_joint/: __init__.py  burger_joint.py
src/flippers/chef/: __init__.py  chef.py
src/flippers/conf/: config.yaml
src/flippers/conf/chef/: default.yaml
src/flippers/conf/courier/: premium.yaml  slow.yaml
src/flippers/conf/order_service/: full.yaml  vegan.yaml
src/flippers/core/: __init__.py  base_model.py  type_aliases.py
src/flippers/courier/: __init__.py  courier.py
src/flippers/models/: __init__.py  burger.py  orders.py
src/flippers/order_service/: __init__.py  order_service.py
